--- a/src/main/webapp/loginpage.html
+++ b/src/main/webapp/loginpage.html
@@ -10,7 +10,7 @@
 <body>
 <h1>Login Page</h1>
 <form action="Servlet1" method="get">
-    <input type="text" name="name">
+    <input type="text" name="email">
     <br>
     <input type="password" name="password">
     <br>
