--- a/src/main/webapp/mhomepage.html
+++ b/src/main/webapp/mhomepage.html
@@ -8,15 +8,17 @@
     <title>Employee Home Page</title>
 </head>
 <body>
-  <h1>Employee Home Page</h1>
-  <input type="button" value="Approve/Deny pending reimbursement requests">
-  <br><br>
-  <input type="button" value="View all pending requests of all employees">
-  <br><br>
-  <input type="button" value="View reimbursement requests of a specific employee">
-  <br><br>
-  <input type="button" value="View all employees">
-  <br><br>
-  <input type="button" value="Logout">
-</body>
+    <h1>Employee Home Page</h1>
+    <input type="button" value="Approve/Deny pending reimbursement requests">
+    <br><br>
+    <input type="button" value="View all pending requests of all employees">
+    <br><br>
+    <input type="button" value="View all resolved requests of all employees">
+    <br><br>
+    <input type="button" value="View reimbursement requests of a specific employee">
+    <br><br>
+    <input type="button" value="View all employees">
+    <br><br>
+    <input type="button" value="Logout">
+    </body>
 </html>
