added github url to pom.xml

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,20 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Login Page</title>
 </head>
 <body>
-<h1>Registration Form</h1>
-<form action="register" method="post">
-    <p>
-        Name: <input type="text" name="user_name" />
-    </p>
-    <p>
-        Email: <input type="text" name="user_email" />
-    </p>
-    <p>
-        <input type="submit" value="Register" />
-    </p>
+<h1>Login Page</h1>
+<form action="ehomepage.html" method="get">
+    <input type="text" name="email">
+    <br>
+    <input type="password" name="password">
+    <br>
+    <input id="loginbutton" type="submit" value="Login" name="login">
 </form>
+<br><br>
+<input type="button" value="Logout">
 </body>
 </html>
