--- a/src/main/webapp/loginpage.html
+++ b/src/main/webapp/loginpage.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <h1>Login Page</h1>
-<form action="Servlet1" method="get">
+<form action="ehomepage.html" method="get">
     <input type="text" name="email">
     <br>
     <input type="password" name="password">
     <br>
-    <input type="submit" value="Submit">
+    <input id="loginbutton" type="submit" value="Login" name="login">
 </form>
 <br><br>
 <input type="button" value="Logout">
