--- a/src/main/webapp/loginpage.html
+++ b/src/main/webapp/loginpage.html
@@ -7,17 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Login Page</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400&display=swap');
+        body {
+        font-family: 'Fira Mono', monospace;
+        }
+    </style>
 </head>
-<body>
-<h1>Login Page</h1>
-<form action="ehomepage.html" method="get">
+<body class="center">
+<h1 class="center">Login Page</h1>
+<form action="ehomepage.html" method="get" class="center">
+    <p>enter email</p>
     <input type="text" name="email">
-    <br>
+    <br><br>
+    <p>enter password</p>
     <input type="password" name="password">
-    <br>
+    <br><br>
     <input id="loginbutton" type="submit" value="Login" name="login">
 </form>
-<br><br>
-<input type="button" value="Logout">
 </body>
 </html>
