--- a/src/main/webapp/mhomepage.html
+++ b/src/main/webapp/mhomepage.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Employee Home Page</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400&display=swap');
+        body {
+        font-family: 'Fira Mono', monospace;
+        }
+    </style>
 </head>
 <body>
     <h1>Employee Home Page</h1>
