Implemented login/logout system.

--- a/src/main/webapp/ehomepage.html
+++ b/src/main/webapp/ehomepage.html
@@ -19,6 +19,8 @@
   <br><br>
   <input type="button" value="Update your information">
   <br><br>
-  <input type="button" value="Logout">
+  <form action="logout" method="get">
+      <input type="submit" value="Logout">
+  </form>
 </body>
 </html>
