--- a/src/main/webapp/loginpage.html
+++ b/src/main/webapp/loginpage.html
@@ -9,14 +9,12 @@
 </head>
 <body>
 <h1>Login Page</h1>
-<form action="ehomepage.html" method="get">
-    <input type="text" name="email">
+<form action="login" method="post">
+    Email: <input type="email" name="email">
     <br>
-    <input type="password" name="password">
+    Password: <input type="password" name="password">
     <br>
-    <input id="loginbutton" type="submit" value="Login" name="login">
+    <input type="submit" value="Login">
 </form>
-<br><br>
-<input type="button" value="Logout">
 </body>
 </html>
