--- a/src/main/webapp/mhomepage.html
+++ b/src/main/webapp/mhomepage.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Employee Home Page</title>
+    <title>Manager Home Page</title>
 </head>
 <body>
-    <h1>Employee Home Page</h1>
+    <h1>Manager Home Page</h1>
     <input type="button" value="Approve/Deny pending reimbursement requests">
     <br><br>
     <input type="button" value="View all pending requests of all employees">
@@ -19,6 +19,8 @@
     <br><br>
     <input type="button" value="View all employees">
     <br><br>
-    <input type="button" value="Logout">
+    <form action="logout" method="get">
+        <input type="submit" value="Logout">
+    </form>
     </body>
 </html>
