centered homepage buttons & added the start of employee's view info page functionality

--- a/src/main/webapp/ehomepage.html
+++ b/src/main/webapp/ehomepage.html
@@ -16,15 +16,25 @@
 </head>
 <body>
   <h1 class="center">Employee Home Page</h1>
-  <input type="button" value="Submit a reimbursement request" class=".center">
+  <form action="submitrequest" method="get" class="center">
+    <input type="button" value="Submit a reimbursement request" class="center">
+  </form>
   <br><br>
-  <input type="button" value="View pending reimbursement requests" class=".center">
+  <form action="viewpendinge" method="get" class="center">
+    <input type="button" value="View pending reimbursement requests" class="center">
+  </form>
   <br><br>
-  <input type="button" value="View resolved reimbursement requests" class=".center">
+  <form action="viewresolvede" method="get" class="center">
+    <input type="button" value="View resolved reimbursement requests" class="center">
+  </form>
   <br><br>
-  <input type="button" value="View your information" class=".center">
+  <form action="viewinfo" method="get" class="center">
+    <input type="button" value="View your information" class="center">
+  </form>
   <br><br>
-  <input type="button" value="Update your information" class=".center">
+  <form action="updateinfo" method="get" class="center">
+    <input type="button" value="Update your information" class="center">
+  </form>
   <br><br>
   <form action="logout" method="get" class="center">
       <input type="submit" value="Logout">
