Added all remaining pages

--- a/src/main/webapp/approvedenypage.html
+++ b/src/main/webapp/approvedenypage.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-  <h1 class="center">Employee Information Page</h1>
+  <h1 class="center">Approve/Deny Reimbursement Request Page</h1>
   <br><br>
   <br><br>
   <form action="backtohomepage" method="get" class="center">
