--- a/src/main/webapp/ehomepage.html
+++ b/src/main/webapp/ehomepage.html
@@ -20,11 +20,11 @@
     <input type="button" value="Submit a reimbursement request" class="center">
   </form>
   <br><br>
-  <form action="viewpendinge" method="get" class="center">
+  <form action="viewpending" method="get" class="center">
     <input type="button" value="View pending reimbursement requests" class="center">
   </form>
   <br><br>
-  <form action="viewresolvede" method="get" class="center">
+  <form action="viewresolved" method="get" class="center">
     <input type="button" value="View resolved reimbursement requests" class="center">
   </form>
   <br><br>
