--- a/src/main/webapp/mhomepage.html
+++ b/src/main/webapp/mhomepage.html
@@ -20,11 +20,11 @@
         <input type="button" value="Approve/Deny pending reimbursement requests">
     </form>
     <br><br>
-    <form action="viewpending" method="get" class="center">
+    <form action="viewallpending" method="get" class="center">
         <input type="button" value="View all pending requests of all employees">
     </form>
     <br><br>
-    <form action="viewresolved" method="get" class="center">
+    <form action="viewallresolved" method="get" class="center">
         <input type="button" value="View all resolved requests of all employees">
     </form>
     <br><br>
