--- a/src/main/webapp/submitrequestpage.html
+++ b/src/main/webapp/submitrequestpage.html
@@ -15,8 +15,11 @@
     </style>
 </head>
 <body>
-  <h1 class="center">Employee Information Page</h1>
+  <h1 class="center">Submit Reimbursement Request Page</h1>
   <br><br>
+  <form action="submitreimbursementrequest" method="get" class="center">
+      <input type="text" value="Back to homepage">
+  </form>
   <br><br>
   <form action="backtohomepage" method="get" class="center">
       <input type="submit" value="Back to homepage">
